--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,11 @@ button {
     border-radius: 10px;
 }
 
+.button-control {
+    padding: 20px;
+    border: black solid 1px;
+}
+
 #flip,
 #roll {
     background: linear-gradient(to bottom left, lightblue, white);
@@ -69,3 +74,4 @@ td {
     padding: 5px;
     font-weight: bold;
 }
+
